files/authentication-policy/destination-rule-meshpolicy.yaml
apiVersion: networking.istio.io/v1beta1
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "istio-system"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
